# Tiralabra-2022-MarkovMusic

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
data/: english_word_frequency_dictionary.json  english_words.csv
documentation/: implementation_document.md  project_specification.md  testing_document.md  user_guide.md  weekly_report_week_1.md  weekly_report_week_2.md  weekly_report_week_3.md  weekly_report_week_4.md  weekly_report_week_5.md  weekly_report_week_6.md  weekly_report_week_7.md
src/: index.py  relevance_test_index.py
src/repositories/: db_utilities.py  trie.py
src/services/: heuristics.py  spell_check.py
src/tests/: heuristics_test.py  spell_check_test.py  trie_test.py
src/ui/: ui.py
src/utilities/: relevance_test_random_test_words.txt  relevance_test_random_test_words2.txt  relevance_test_script.py
