[tool.poetry]
name = "tiralabra-2022-verbumreprehendo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.1"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.14.5"
pytest = "^7.1.2"
coverage = "^6.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
